# Polybot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: default.toml  secrets.local.toml.example  service.example.toml  service.toml
docs/: Polymarket Arbitrage Bot – Product & Technical Documentation.md  acceptance-checklist.md  acceptance-walkthrough.md  commands-reference.md  deployment.md  handoff.md  prd.md  progress.md  roadmap.md  runbook.md  technical-plan.md  tgbot-prd.md
observability/: grafana-dashboard.json
polybot/: config.py
polybot/adapters/: __init__.py
polybot/cli/: __main__.py  commands.py
polybot/core/: __init__.py  checksum.py  models.py  pricing.py  ratelimit.py
polybot/exec/: __init__.py  engine.py  planning.py  risk.py
polybot/ingestion/: __init__.py  market_scheduler.py  market_sync.py  markets.py  orderbook.py  runner.py  scheduler.py  snapshot.py  validator.py
polybot/observability/: __init__.py  health.py  logging.py  metrics.py  prometheus.py  recording.py  replay.py  server.py
polybot/scripts/: hype_smoke.py
polybot/service/: config.py  runner.py
polybot/storage/: __init__.py  db.py  markets.py  migrate.py  orders.py  schema.py
polybot/strategy/: conversions.py  dutch_book.py  dutch_runner.py  quoter_runner.py  spread.py  spread_quoter.py
polybot/tgbot/: agent.py  commands.py  runner.py  webhook_server.py
recordings/: sample.jsonl
tests/fixtures/: gamma_markets_sample.json  ws_polymarket_messages.json
tests/integration/: test_cli_dutch_run_replay_auto_outcomes.py  test_cli_health.py  test_cli_replay.py  (+46 more)
(+181 files in other folders)
