[project]
name = "polybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.8",
    "orjson>=3.10",
]

[tool.uv]
dev-dependencies = [
    "pytest~=8.3",
    "pytest-asyncio~=0.23",
    "hypothesis~=6.112",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
